[metadata]
name = json-stream
version = 1.2.0
author = Jamie Cockburn
author_email = jamie_cockburn@hotmail.co.uk
description = Streaming JSON decoder
keywords = json, stream, decoder, encoder
url = https://github.com/daggaz/json-stream
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/daggaz/json-stream/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
setup_requires = wheel
python_requires = >=3.5, <4
install_requires =
    requests

[options.packages.find]
where = src
